# memex-hermes

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  USAGE.md  build.ts  checksums.txt  package.json  plugin.yaml  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  release-please-config.json  tsconfig.json  vitest.config.ts
.claude/handoffs/: 20260525-bootstrap-memex-hermes-resume-on-hermes-host.md
.github/workflows/: ci.yml  release-please.yml
design/: cross-adapter-byte-compat-golden.md  harness-continuity-bundle-consumer.md  memex-remember-commit-push.md
docs/specs/: 2026-05-25-memex-hermes-adapter-design.md  2026-07-11-file-rules-shared-origin-projection.md
memex_hermes/: __init__.py  _hermes_stub.py  config.py  envelope.py  install.py  paths.py  provider.py  runner.py  tools.py
openspec/changes/archive/2026-06-23-bootstrap-memex-hermes-adapter/: design.md  tasks.md
openspec/changes/archive/2026-06-23-bootstrap-memex-hermes-adapter/specs/hermes-engine-events/: spec.md
openspec/changes/archive/2026-06-23-bootstrap-memex-hermes-adapter/specs/hermes-path-resolution/: spec.md
openspec/changes/archive/2026-06-23-bootstrap-memex-hermes-adapter/specs/hermes-plugin-packaging/: spec.md
openspec/changes/archive/2026-06-23-bootstrap-memex-hermes-adapter/specs/hermes-sync-bridge/: spec.md
openspec/changes/archive/2026-06-23-bootstrap-memex-hermes-adapter/specs/memex-tool-surface/: spec.md
openspec/changes/archive/2026-06-23-verify-cross-adapter-byte-compat/specs/hermes-sync-bridge/: spec.md
openspec/changes/bootstrap-memex-hermes-adapter/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-memex-hermes-adapter/specs/hermes-engine-events/: spec.md
openspec/changes/bootstrap-memex-hermes-adapter/specs/hermes-memory-provider/: spec.md
openspec/changes/bootstrap-memex-hermes-adapter/specs/hermes-path-resolution/: spec.md
openspec/changes/bootstrap-memex-hermes-adapter/specs/hermes-plugin-packaging/: spec.md
openspec/changes/bootstrap-memex-hermes-adapter/specs/hermes-sync-bridge/: spec.md
openspec/changes/verify-cross-adapter-byte-compat/: proposal.md  tasks.md
openspec/changes/verify-cross-adapter-byte-compat/specs/hermes-sync-bridge/: spec.md
openspec/changes/wire-memex-remember-commit-push/: proposal.md  tasks.md
openspec/changes/wire-memex-remember-commit-push/specs/memex-tool-surface/: spec.md
openspec/specs/hermes-engine-events/: spec.md
openspec/specs/hermes-memory-provider/: spec.md
openspec/specs/hermes-path-resolution/: spec.md
openspec/specs/hermes-plugin-packaging/: spec.md
openspec/specs/hermes-sync-bridge/: spec.md
openspec/specs/memex-tool-surface/: spec.md
skills/deep-sleep/: SKILL.md
skills/doctor/: SKILL.md
skills/handoff/: SKILL.md
skills/sleep/: SKILL.md
spike/: README.md  SPIKE-COMPLETE.md  trace_provider.py
src/: main.ts  state.ts
src/core/: config.ts  envelope.ts  hermes-config-yaml.ts  hermes-paths.ts  memory-format.ts  memory-mtimes.ts  prefetch-injections.ts  projection.ts  scan-roots.ts  session.ts  sync-helpers.ts  yaml-frontmatter.ts
src/hooks/: _mirror.ts  health.ts  init.ts  memory-write.ts  pre-compress.ts  prefetch.ts  queue-prefetch.ts  session-end.ts  session-switch.ts  shutdown.ts  sync-turn.ts  system-prompt.ts  tool-recall.ts  tool-remember.ts  tool-search.ts
test/e2e/: README.md  __init__.py  conftest.py  fixtures.py  mypy.ini  pytest.ini  test_binary_failure.py  test_binary_resolution.py  test_first_run.py  test_hermes_home.py  test_memory_mirror.py  test_skill_match.py  test_sync_compat.py
test/fixtures/cross-adapter/: README.md  golden-memory-frontmatter.md  golden-memory-prose.md  golden-memory-section.md  location-round-trip-golden.ts
test/python/: conftest.py  fake_binary.py  stub_runner.py  test_config.py  test_dispatch_invariant.py  test_install.py  test_no_engine_imports.py  test_paths.py  test_provider.py  test_provider_hooks.py  test_provider_signatures.py  test_provider_suppression.py  test_register.py  test_runner.py  test_shutdown_drain.py  test_tools.py
test/ts/: _helpers.ts  commit-and-push.test.ts  concurrency.test.ts  config.test.ts  cross-adapter-compat.test.ts  cross-adapter-pin-alignment.test.ts  cross-process-state.test.ts  envelope.test.ts  hermes-config-yaml.test.ts  hermes-paths.test.ts  location-round-trip-golden.test.ts  main-coverage.test.ts  main.test.ts  memory-write.test.ts  portable-read.test.ts  prefetch-telemetry-handoff.test.ts  prefetch.test.ts  projection.test.ts  release-matrix.test.ts  scan-roots.test.ts  session-end.test.ts  session-suppression.test.ts  session-switch.test.ts  session.test.ts  sync-turn.test.ts  tool-dispatch.test.ts  tool-remember-security.test.ts  tool-remember-sync.test.ts
