[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "memex-hermes"
version = "0.1.0"
description = "Memex skill/memory/rule router for Hermes Agent — semantic context injection via MemoryProvider, sharing the @jim80net/memex-core engine binary with memex-claude and memex-openclaw"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jim Park", email = "silentkhaos@gmail.com" }]
requires-python = ">=3.10"
keywords = ["hermes", "memex", "memory-provider", "skill-router", "embeddings", "rag", "semantic-search"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/jim80net/memex-hermes"
Repository = "https://github.com/jim80net/memex-hermes"
Issues = "https://github.com/jim80net/memex-hermes/issues"

[project.entry-points."hermes_agent.plugins"]
memex = "memex_hermes"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "ruff>=0.7",
]

# Pinned upstream `memex` binary release that this plugin version downloads on first run.
# See bin/memex (the wrapper) and bin/install.sh for download logic; checksums.txt for SHA256 verification.
[tool.memex-hermes.binary]
upstream-release = "memex-claude@v1.5.0"  # placeholder — bumped during release

[tool.hatch.build.targets.wheel]
packages = ["memex_hermes"]
include = ["bin/**", "skills/**", "plugin.yaml", "checksums.txt"]

[tool.hatch.build.targets.sdist]
include = [
  "memex_hermes/**",
  "bin/**",
  "skills/**",
  "plugin.yaml",
  "checksums.txt",
  "README.md",
  "LICENSE",
  "CONTRIBUTING.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test/python"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
files = ["memex_hermes"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
